# QA_Bootcamp_Case

./: .env.example  .gitignore  README.md  conftest.py  main.py  pyproject.toml
.github/workflows/: ci.yml
fixtures/: conftest.py
pages/: base_page.py  careers_page.py  home_page.py  jobs_page.py
tests/: test_apply_flow.py  test_careers.py  test_homepage.py
utils/: config.py  helpers.py  logger.py
